# footy-dynasty

./: .gitignore  LICENSE  PR_BODY.md  README.md  skills-lock.json  vercel.json
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/: dependabot.yml
.github/workflows/: ci.yml  desktop-release.yml  mobile-ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
footy-dynasty/: .gitignore  Footy Dynasty Mobile.html  Footy Dynasty Redesign v1.html  Footy Dynasty Redesign.html  README.md  data.js  direction-a-2.jsx  direction-a-mobile.jsx  direction-a-polish-1.jsx  direction-a-polish-2.jsx  dynastybet.html  eslint.config.js  index.html  package-lock.json  package.json  pho-hung-vuong.html  playwright.config.js  tailwind.config.js  tokens.css  tsconfig.json  vite.config.js  vitest.config.ts
footy-dynasty/design/: FIGMA_HANDOFF.md  tokens.json  (+1 more)
footy-dynasty/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
footy-dynasty/src-tauri/icons/: icon.icns
footy-dynasty/src-tauri/src/: lib.rs  main.rs
mobile/: .gitignore  App.js  README.md  app.json  package-lock.json  package.json
mockups/: HIGGSFIELD_UNBLOCK.md  higgsfield-redesign-prompts.md  hub-v1.html  hub-v2.html  hub-v3.html  hub-v4.html  hub-v5.html  hub-v6.html  hub.html  player-card.html  redesign-board.html
scripts/: gen-mockups.mjs  stitch-batch.mjs  stitch.mjs
(+337 files in other folders)
